# VFaceOff

./: README.md  settings.gradle.kts
VFaceOff/: package.json  pnpm-lock.yaml
VFaceOff/src-tauri/: Cargo.toml  tauri.conf.json
VFaceOff/src-tauri/src/: lib.rs  main.rs
VFaceOff/src/libs/: camera.ts
VFaceOff/src/routes/: +page.svelte
app/: build.gradle.kts
app/src/androidTest/java/com/example/vfaceoff/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/vfaceoff/: MainActivity.kt  overlayLandmarkView.kt  overlayView.kt
app/src/main/java/com/example/vfaceoff/imageAnalysis/: FaceAnalyzer.kt  FaceDetector.kt  FaceDetectorHelper.kt  FaceLandmarkerHelper.kt  LandmarkDetector.kt  TrackingViewModel.kt
app/src/main/java/com/example/vfaceoff/permission/: PermissionRequired.kt
app/src/main/java/com/example/vfaceoff/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/vfaceoff/views/: FaceDetectorScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/vfaceoff/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust-opencv/: Cargo.toml
rust-opencv/src/: common.rs  elements.rs  main.rs  traits.rs
